--- a/index.html
+++ b/index.html
@@ -50,42 +50,62 @@
           .tabs .tab a:focus, .tabs .tab a:focus.active {
               background: transparent;
           }
+
+          /* stlyling the services section */
+          #services .card h5{
+            padding: 10px 0px;
+          }
+          #services .card {
+              transition: .5s;
+              background: #eee;
+          }
+          #services .card:hover i, h5{
+              color: indigo;
+          }
+          #services .card:hover{
+              transform: scale(1.03);
+              background: #fff;
+          }
       </style>
     </head>
     
     <body class="grey lighten-4">
       <!-- navbar -->
       <header>
-        <nav class="nav-wrapper transparent">
-            <div class="container">
-                <a href="#" class="brand-logo">Kanai Steve W</a>
-                <a href="" class="sidenav-trigger" data-target="mobile-menu">
-                    <i class="material-icons">menu</i>
-                </a>
-                <ul class="right hide-on-med-and-down">
-                    <li><a href="#work">Work</a></li>
-                    <li><a href="#services">Services</a></li>
-                    <li><a href="#contact">contact</a></li>
-                    <li><a href="#" class="tooltipped btn-floating btn-small indigo darken-4" data-position="bottom" data-tooltip="Instagram">
-                        <i class="fab fa-instagram"></i>
-                    </a></li>
-                    <li><a href="#" class="tooltipped btn-floating btn-small indigo darken-4" data-position="bottom" data-tooltip="Facebook">
-                        <i class="fab fa-facebook"></i>
-                    </a></li>
-                    <li><a href="#" class="tooltipped btn-floating btn-small indigo darken-4" data-position="bottom" data-tooltip="Twitter">
-                        <i class="fab fa-twitter"></i>
-                    </a></li>
-                    <li><a href="https://github.com/kanaisteve" class="tooltipped btn-floating btn-small indigo darken-4" data-position="bottom" data-tooltip="GitHub">
-                        <i class="fab fa-github"></i>
-                    </a></li>
-                </ul>
-                <ul class="sidenav grey lighten-2" id="mobile-menu">
-                    <li><a href="#">Work</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">contact</a></li>
-                </ul>
-            </div>
-        </nav>
+        <div>
+            <nav class="nav-wrapper indigo">
+                <div class="container">
+                    <a href="#" class="brand-logo">Kanai Steve W</a>
+                    <a href="" class="sidenav-trigger" data-target="mobile-menu">
+                        <i class="material-icons">menu</i>
+                    </a>
+                    <ul class="right hide-on-med-and-down">
+                        <li><a href="#work" >Work</a></li>
+                        <li><a href="#services">Services</a></li>
+                        <li><a href="#resume">Resume</a></li>
+                        <li><a href="#contact">contact</a></li>
+                        <li><a href="#" class="tooltipped btn-floating btn-small indigo darken-4" data-position="bottom" data-tooltip="Instagram">
+                            <i class="fab fa-instagram"></i>
+                        </a></li>
+                        <li><a href="#" class="tooltipped btn-floating btn-small indigo darken-4" data-position="bottom" data-tooltip="Facebook">
+                            <i class="fab fa-facebook"></i>
+                        </a></li>
+                        <li><a href="#" class="tooltipped btn-floating btn-small indigo darken-4" data-position="bottom" data-tooltip="Twitter">
+                            <i class="fab fa-twitter"></i>
+                        </a></li>
+                        <li><a href="https://github.com/kanaisteve" class="tooltipped btn-floating btn-small indigo darken-4" data-position="bottom" data-tooltip="GitHub">
+                            <i class="fab fa-github"></i>
+                        </a></li>
+                    </ul>
+                    <ul class="sidenav grey lighten-2" id="mobile-menu">
+                        <li><a href="#work">Work</a></li>
+                        <li><a href="#services">Services</a></li>
+                        <li><a href="#resume">Resume</a></li>
+                        <li><a href="#contact">contact</a></li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
       </header>
 
     <!-- Recent Works -->
@@ -268,35 +288,52 @@
       <section class="section container scrollspy" id="services">
         <h3 class="page-header indigo-text text-darken-4">Services  <small class="heading-meta">What I do...</small></h3>
           <div class="row">
-              <!-- What I do column -->
-              <div class="col s12 l4">
-                  <p>I design and develop web and mobile applications to meet the business requirements of my clients.</p>
-                  <p>Every client is different so my work ranges from basic static websites to more complex complex web and mobile applications.</p>
-                  <p>Take a look at my online portfolio for example of client work and code samples.</p>
+              <!-- Card 1 -->
+              <div class="col s12 m6 l4 center-align">
+                  <div class="card">
+                      <div class="card-content">
+                            <i class="material-icons large">palette</i>
+                            <h5>Responsive Design</h5>
+                            <ul>
+                                <li>UI/UX Research</li>
+                                <li>UI/UX Design</li>
+                            </ul>
+                      </div>
+                      <div class="card-action"><a href="#" class="grey-text">Read More...</a></div>
+                  </div>
               </div>
 
-              <!-- Tabs column -->
-              <div class="col s12 l6 offset-l2">
-                  <ul class="tabs">
-                      <li class="tab col s4"><a href="#design" class="active indigo-text text-darken-4 fo">Design</a></li>
-                      <li class="tab col s4"><a href="#web" class="indigo-text text-darken-4">Web</a></li>
-                      <li class="tab col s4"><a href="#mobile" class="indigo-text text-darken-4">Mobile</a></li>
-                  </ul>
-                  <div class="col s12" id="design">
-                    <p class="flow-text indigo-text text-darken-4">Design</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec, tincidunt orci.</p>
-                    <p>Mauris dolor augue, vulputate in pharetra ac, facilisis nec libero. Fusce condimentum gravida urna, vitae scelerisque erat ornare nec.</p>
-                  </div>
-                  <div class="col s12" id="web">
-                    <p class="flow-text indigo-text text-darken-4">Web Development</p>
-                    <p>I develop responsive web applications using front and back end technologies such as HTML, CSS, JavaScript and PHP.</p>
-                    <p>On the front end, I use front end frameworks such as Bootstrap, Materialize, Tailwing and JQuery. On the backe end I use Laravel PHP framework and MySQL.</p>
-                  </div>
-                  <div class="col s12" id="mobile">
-                    <p class="flow-text indigo-text text-darken-4">Mobile Development</p>
-                    <p>I develop mobile applications using flutter tool, a google designed framework because am able to use the same codebase on both android and iPhone devices hence faster development and reaching a huge audiance.</p>
-                  </div>
-              </div>
+              <!-- Card 2 -->
+              <div class="col s12 m6 l4 center-align">
+                <div class="card">
+                    <div class="card-content">
+                        <i class="material-icons large">aspect_ratio</i>
+                        <h5>Web Development</h5>
+                        <ul>
+                            <li>Web Applications</li>
+                            <li>Websites</li>
+                        </ul>
+                    </div>
+                    <div class="card-action"><a href="#" class="grey-text">Read More...</a></div>
+                </div>
+            </div>
+
+            <!-- Card 3 -->
+            <div class="col s12 m6 l4 center-align">
+                <div class="card">
+                    <div class="card-content">
+                        <i class="material-icons large">map</i>
+                        <h5>Mobile Application</h5>
+                        <ul>
+                            <li>Android Apps</li>
+                            <li>iOS Apps</li>
+                        </ul>
+
+                    </div>
+                    <div class="card-action grey-text"><a href="#" class="grey-text">Read More...</a></div>
+                </div>
+            </div>
+
           </div>
       </section>
     
@@ -381,13 +418,13 @@
           <div class="container">
               <div class="row">
                   <div class="col s12 l6">
-                    <h5>About Me</h5>
+                    <h5 class="white-text">About Me</h5>
                     <p>My primary interest is in web development, both front and back end. The industry is a fast paced and constanly moving forward. It is one that requires constant education throughout your entire career. This is exciting to me as there will always be new things to learn and new challenges to overcome.</p>
                     <p>I primary specilize on the laravel PHP framework for web development and flutter framework for mobile development.</p>
                     </div>
 
                   <div class="col s12 l4 offset-l2">
-                      <h5>Connect</h5>
+                      <h5 class="white-text">Connect</h5>
                       <ul>
                           <li><a href="#" class="grey-text text-lighten-3">Facebook</a></li>
                           <li><a href="#" class="grey-text text-lighten-3">Twitter</a></li>
